kubernetes/clusters/home/infrastructure/networking/netbird/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbird-management-nodeport
  namespace: netbird
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: netbird-server
  ports:
    - name: grpc
      port: 80
      targetPort: 80
      nodePort: 32443
