kubernetes/clusters/home/infrastructure/networking/netbird/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbird-dashboard
  namespace: netbird
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`netbird.syslabs.dev`) && (PathPrefix(`/api`) || PathPrefix(`/oauth2`) || PathPrefix(`/management.ManagementService`) || PathPrefix(`/signalexchange.SignalExchange`) || PathPrefix(`/relay`))
      kind: Rule
      priority: 10
      services:
        - name: netbird-server
          port: 80
    - match: Host(`netbird.syslabs.dev`)
      kind: Rule
      priority: 1
      services:
        - name: netbird-dashboard
          port: 80
